RESOLVED FIXED55184
WebKit2: Image-based cursors do not work
https://bugs.webkit.org/show_bug.cgi?id=55184
Summary WebKit2: Image-based cursors do not work
Darin Adler
Reported 2011-02-24 14:19:45 PST
WebKit2: Image-based cursors do not work
Attachments
Patch (21.07 KB, patch)
2011-02-24 14:35 PST, Darin Adler
andersca: review+
Darin Adler
Comment 1 2011-02-24 14:35:11 PST
Darin Adler
Comment 2 2011-02-24 14:35:58 PST
Anders Carlsson
Comment 3 2011-02-24 17:17:24 PST
Comment on attachment 83722 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=83722&action=review > Source/WebKit2/Shared/WebCoreArgumentCoders.h:206 > + if (cursor.type() != WebCore::Cursor::Custom) This should be type instead of cursor.type(). > Source/WebKit2/Shared/WebCoreArgumentCoders.h:236 > + return false; You could check that the hot spot is actually inside the image here.
Darin Adler
Comment 4 2011-02-24 18:10:23 PST
Note You need to log in before you can comment on or make changes to this bug.